--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=pontoseguro
+spring.datasource.url=jdbc:postgresql://localhost:5432/PontoSeguro
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Opcional: Mostrar as SQLs geradas no console (ótimopara dev)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
